--- a/Develop/index.html
+++ b/Develop/index.html
@@ -49,21 +49,21 @@
         </section>
     </content>
     <aside>
-        <div class="benefit-lead">
+        <div class="lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="half gear above funnel with downward arrow leading to dollar symbol coin" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="person with flashing lightbulb head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="gear and three coin with dollar signs inside"/>
             <p>
