--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </nav>
     </header>
 
-    <div class="hero"></div>
+    <div class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people around a table having a meeting" />
+    </div>
 
     <main>
         <section id="search-engine-optimization">
@@ -41,7 +43,7 @@
 
         <section id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"
-                    alt="laptop open with the word repuation and graphs on screen" class="float-right" />
+                alt="laptop open with the word repuation and graphs on screen" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -53,7 +55,7 @@
 
         <section id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"
-                    alt="people sitting in meeting with bubble captions of media" class="float-left" />
+                alt="people sitting in meeting with bubble captions of media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -67,35 +69,36 @@
         <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="gear icon above funnel leading to money" />
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers
-                    directly to your website.
-                </p>
+            <p>
+                Inbound strategies for lead generation require less work for your business, bringing customers
+                directly to your website.
+            </p>
         </section>
 
         <section class="benefit">
             <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="person with flashing lightbulb head" />
-                    <p>
-                        Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-                    </p>
+            <img src="./assets/images/brand-awareness.png" alt="person with flashing lightbulb head" />
+            <p>
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
+            </p>
         </section>
 
         <section class="benefit">
             <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="gear icon and three coin with dollar signs inside" />
-                    <p>
-                        As the search ranking for your business increases, your advertising costs decrease, and you no
-                        longer need to advertise your page.
-                    </p>
+            <img src="./assets/images/cost-management.png" alt="gear icon and three coin with dollar signs inside" />
+            <p>
+                As the search ranking for your business increases, your advertising costs decrease, and you no
+                longer need to advertise your page.
+            </p>
         </section>
     </aside>
 
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-            <p>
-                &copy; 2019 Horiseon Social Solution Services, Inc.
-            </p>
+        <p>
+            &copy; 2019 Horiseon Social Solution Services, Inc.
+        </p>
     </footer>
 </body>
 
