--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
+        <!-- <span> tag is used to mark up a part of the text/document and in this case its "seo" -->
         <h1>Hori<span class="seo">seo</span>n</h1>
+
+        <!-- Navbar -->
         <nav>
             <ul>
                 <li>
+                    <!-- the href="#some-id" refers to a specific id that the page would navigate to when the user click on the nav link -->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -25,11 +30,14 @@
         </nav>
     </header>
 
+    <!-- Main large image -->
     <div class="hero">
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people around a table having a meeting" />
     </div>
 
+    <!-- Body -->
     <main>
+        <!-- Sections of each navlinks -->
         <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
                 alt="desk with opened journal, laptop, pens and coffee on it" class="float-left" />
@@ -65,6 +73,7 @@
         </section>
     </main>
 
+    <!-- Aside -->
     <aside>
         <section class="benefit">
             <h3>Lead Generation</h3>
@@ -94,6 +103,7 @@
         </section>
     </aside>
 
+    <!-- Footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
